[package]
name = "omnidecoder"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
leptos = { version = "0.8.3", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlTextAreaElement", "EventTarget", "Window", "Response"] }
gloo-timers = { version = "0.2", features = ["futures"] }
bs58 = "0.5.1"
base32 = "0.5.1"
fast32 = "1.0.3"
console_error_panic_hook = "0.1.7"
leptos_workers = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
leptos-use = "0.16.3"
